chore: fix IDE warnings — suppress false-positive unused entries, inline constant param, fix obsolete HTML attr, normalize table formatting, birthdate spelling